Fixed overlap of items by adding specific heights in media-queries.css

--- a/css/main.css
+++ b/css/main.css
@@ -57,13 +57,14 @@ h6 { font-size: .75em; }
 	width:15%;
 }
 .lang-img{
-	position: absolute;
+	position: relative;
 	top:50%;
 	left:50%;
 	transform: translate(-50%,-50%);
 	width:50%;
 }
 .img-sites{
+	position: relative;
 	width: 70%;
 	margin: 0 auto;
 }
@@ -76,15 +77,15 @@ h6 { font-size: .75em; }
 	z-index: 1;
 }
 .spacer30{
-	width:100vw;
+	width:100%;
 	height:30px;
 }
 .spacer75{
-	width:100vw;
+	width:100%;
 	height:75px;
 }
 .spacer100{
-	width:100vw;
+	width:100%;
 	height:100px;
 }
 .splash-img{
@@ -157,14 +158,18 @@ h6 { font-size: .75em; }
 	width: 100vw;
 }
 #page2{
-	height:900px;
+	height:1000px;
+	position: relative;
 }
 #page3{
-	height:1000px;
+	height:1100px;
+	position: relative;
+}
+#page4{
+
 }
 #about-txt{
 	position: relative;
-	height: 700px;
 	text-align: center;
 	margin-top: 30px;
 }
@@ -201,6 +206,9 @@ h6 { font-size: .75em; }
 }
 .txt-justified{
 	text-align: justify;
+}
+.txt-pad{
+	padding:0 60px;
 }
 .txt-centered{
 	text-align: center;
